[package]
name = "tensor_for_andrea"
version = "0.1.0"
authors = ["Gammaglobulino <mazzantia@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = "0.16.1"
structopt = "0.3"
image = "0.23.13"
imageproc = "0.22.0"